# nexus

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  vcpkg.json
nexus3d/: webpack.config.js
nexus3d/src/: Cache.js
src/: CMakeLists.txt
src/common/: controller.cpp  controller.h  image.cpp  image.h  logger.h  mmap_file.cpp  mmap_file.h  nexus.cpp  nexusdata.cpp  nexusfile_io.cpp  nexusfile_io.h  nxs.cpp  nxs.h  qcontroller.h  signature.h  virtualarray.cpp  virtualarray.h
src/nxsbuild/: CMakeLists.txt  kdtree.cpp  kdtree.h  main.cpp  mesh.cpp  mesh.h  meshloader.cpp  meshloader.h  meshstream.cpp  meshstream.h  nexusbuilder.cpp  nexusbuilder.h  objloader.cpp  objloader.h  partition.h  plyloader.cpp  plyloader.h  stlloader.cpp  stlloader.h  texpyramid.cpp  texpyramid.h  tmesh.cpp  tmesh.h  trianglesoup.h  tsloader.cpp  tsloader.h  tsploader.cpp  tsploader.h  vcgloader.h
src/nxsedit/: CMakeLists.txt  extractor.cpp  extractor.h
src/nxsview/: CMakeLists.txt  gl_nxsview.cpp  gl_nxsview.h  main.cpp
src/nxszip/: meshcoder.cpp
tests/: CMakeLists.txt  manual_build_test.cpp  test_image.cpp  test_mmap_file.cpp  test_nexusbuild.cpp  test_nexusdata.cpp  test_objloader.cpp  test_plyloader.cpp  test_signature.cpp  test_stlloader.cpp  test_virtualarray.cpp  testarea.cpp  testarea.h  testfs.cpp  testfs.h
